k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cybernet-lab
  labels:
    name: cybernet-lab
    app.kubernetes.io/name: cybernet-lab
    app.kubernetes.io/version: "4.0.0"
